--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,2 +1,9 @@
 <h1><%= @cocktail.name %></h1>
+<ul class = 'list-group'>
+  <% @cocktail.doses.each do |dose| %>
+    <li class='list-group-item'>
+      <%= dose.description %> <%= dose.ingredient.name %>
+    </li>
+  <% end %>
+</ul>
 <%= link_to 'Back to list', cocktails_path %>
