--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,8 +2,10 @@
 <ul class = 'list-group'>
   <% @cocktail.doses.each do |dose| %>
     <li class='list-group-item'>
-      <%= dose.description %> <%= dose.ingredient.name %>
+      <%= dose.description %>
+      <%= dose.ingredient.name %>
     </li>
   <% end %>
 </ul>
 <%= link_to 'Back to list', cocktails_path %>
+<%= link_to 'Add an ingredient', new_cocktail_dose_path(@cocktail) %>
