--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,11 +1,12 @@
-<h1>Our cocktail offer</h1>
+
+<h1>My best cocktails</h1>
 <ul>
-  <% @cocktails.each do |cocktail| %>
+  <%= @cocktails.each do |cocktail| %>
     <li>
-      <%= cocktail.name %><%= link_to 'See more', cocktail_path(cocktail) %>
+      <%= cocktail.name %>
+      <%= link_to 'See more', cocktail_path(cocktail) %>
     </li>
   <% end %>
- </ul>
- <%= link_to 'Add a new cocktail', new_cocktail_path %>
+</ul>
 
-
+<%= link_to 'Add a new cocktail', new_cocktail_path %>
