add claudinary images - banner + default image

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/fofo921/image/upload/v1608057706/y4pmsiqdsgfhv6nqov8z.jpg);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path 'https://res.cloudinary.com/fofo921/image/upload/v1608057706/y4pmsiqdsgfhv6nqov8z.jpg' %>')">
   <div class="container">
     <h1>My best cocktails to <strong>creative people</strong>!</h1>
     <p>Change your life by coding and harvesting new skills.</p>
@@ -9,6 +9,11 @@
   <% @cocktails.each do |cocktail| %>
     <li>
       <%= cocktail.name %>
+      <% if cocktail.photo.attached? %>
+        <%= cl_image_tag cocktail.photo.key, height: 150, width: 150, crop: :fill %>
+      <% else %>
+        <%= cl_image_tag 'default_cocktail', height: 150, width: 150, crop: :fill %>
+      <% end %>
       <%= link_to 'See more', cocktail_path(cocktail) %>
     </li>
   <% end %>
