--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,9 @@
 .banner {
   background-size: cover;
   background-position: center;
+  border-radius: 25px;
   padding: 150px 0;
+  margin-bottom: 20px;
 }
 
 .banner h1 {
