--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,16 +1,17 @@
 .card-category {
-  background-image: asset-url('Mojito-unsplash.jpg');
+  // background-image: asset-url('Mojito-unsplash.jpg, height: 200');
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://res.cloudinary.com/fofo921/image/upload/v1608054903/default_cocktail.jpg, height: 150, width: 150, crop: :fill');
   width: 250px;
   height:500px;
   background-size: cover;
   background-position: center;
-  display: flex;
+  flex-grow: 1;
   justify-content: center;
   align-items: center;
   color: white;
   font-size: 24px;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
