--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,14 @@
 @import "avatar";
 @import "navbar";
 @import "card";
+
+.flex-container {
+  display: grid;
+  padding: 20px;
+  border-radius:25px;
+  border: 1px solid lightgrey;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  justify-content: space-between;
+  background-color: rgba(216, 215, 214, 0.5);
+}
