--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -10,13 +10,18 @@
     <div class="flex-item">
       <% if cocktail.photo.attached? %>
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
-          url('<%= cl_image_path cocktail.photo.key, height: 150, width: 150, crop: :fill %>')">
+          url('<%= cl_image_path cocktail.photo.key, height: 150, width: 200, crop: :fill %>')">
       <% else %>
         <div class="card-category">
       <% end %>
           <%= cocktail.name %>
           </div>
-      <%= link_to 'See more', cocktail_path(cocktail) %>
+      <%= link_to 'See more', cocktail_path(cocktail), class: 'btn btn-gradient btn-sm'%>
+      <% if !cocktail.photo.attached? %>
+        <%= link_to 'Add a picture', '#', class: 'btn btn-gradient btn-sm' %>
+      <% else %>
+        <%= link_to 'Change picture', '#', class: 'btn btngradient btn-sm' %>
+      <% end %>
     </div>
   <% end %>
 </div>
