--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -12,20 +12,20 @@
         <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
           url('<%= cl_image_path cocktail.photo.key, height: 150, width: 200, crop: :fill %>')">
       <% else %>
-        <div class="card-category">
+        <div class="card-category" style= "background-image: height: 150, width: 200">
       <% end %>
           <%= cocktail.name %>
           </div>
       <%= link_to 'See more', cocktail_path(cocktail), class: 'btn btn-gradient btn-sm'%>
       <% if !cocktail.photo.attached? %>
-        <%= link_to 'Add a picture', '#', class: 'btn btn-gradient btn-sm' %>
+        <%= link_to 'Add a picture', edit_cocktail_path(cocktail), class: 'btn btn-gradient btn-sm' %>
       <% else %>
         <%= link_to 'Change picture', '#', class: 'btn btngradient btn-sm' %>
       <% end %>
     </div>
   <% end %>
 </div>
-<%= link_to 'Add a new cocktail', new_cocktail_path %>
+<%= link_to 'Add a new cocktail', new_cocktail_path, class: 'btn btn-gradient btn-sm' %>
 
 <div class="footer">
   <div class="footer-links">
