--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Edit <%= @cocktail %></h1>
+<h1>Edit <%= @cocktail.name %></h1>
   <%= render 'form' %>
 <%= link_to 'Back to list', cocktails_path %>
