change buttons in cocktail show view

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -22,7 +22,7 @@
       <% if !cocktail.photo.attached? %>
         <%= link_to 'Add a picture', edit_cocktail_path(cocktail), class: 'btn btn-gradient btn-sm' %>
       <% else %>
-        <%= link_to 'Change picture', edit_cocktail_path(cocktail), class: 'btn btngradient btn-sm' %>
+        <%= link_to 'Change picture', edit_cocktail_path(cocktail), class: 'btn btn-gradient btn-sm' %>
       <% end %>
     </div>
   <% end %>
