--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,22 +1,25 @@
 <h1><%= @cocktail.name %></h1>
 <div class="container">
   <div class="row">
-    <div class="col-lg-5">
-      <%= cl_image_tag @cocktail.photo.key, height: 400, width: 400, crop: :fill %>
+    <div class="col-lg-6">
+      <%= cl_image_tag @cocktail.photo.key, height: 500, width: 500, crop: :fill %>
     </div>
-    <div class="col-lg-7">
+    <div class="col-lg-6">
       <ul class = 'list-group'>
         <% @cocktail.doses.each do |dose| %>
           <li class='list-group-item'>
             <%= dose.description %>
             <%= dose.ingredient.name %>
-            <%= link_to 'Delete ingredient', dose_path(dose), method: :delete,
-              data: {confirm: 'Are you sure?'} %>
+            <%= link_to dose_path(dose), method: :delete,
+              data: {confirm: 'Are you sure?'} do %>
+              <i class="far fa-trash-alt"></i>
+            <% end %>
           </li>
         <% end %>
       </ul>
+      <%= link_to 'Back to list', cocktails_path, class: 'btn btn-gradient' %>
+      <%= link_to 'Add an ingredient', new_cocktail_dose_path(@cocktail), class: 'btn btn-gradient' %>
     </div>
   </div>
 </div>
-<%= link_to 'Back to list', cocktails_path %>
-<%= link_to 'Add an ingredient', new_cocktail_dose_path(@cocktail) %>
+
