--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -2,21 +2,27 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-6">
-      <%= cl_image_tag @cocktail.photo.key, height: 500, width: 500, crop: :fill %>
+      <% if @cocktail.photo.attached? %>
+        <%= cl_image_tag @cocktail.photo.key, height: 500, width: 500, crop: :fill %>
+      <% end %>
     </div>
     <div class="col-lg-6">
-      <ul class = 'list-group'>
-        <% @cocktail.doses.each do |dose| %>
-          <li class='list-group-item'>
-            <%= dose.description %>
-            <%= dose.ingredient.name %>
-            <%= link_to dose_path(dose), method: :delete,
-              data: {confirm: 'Are you sure?'} do %>
-              <i class="far fa-trash-alt"></i>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <% if @cocktail.doses.empty? %>
+        <li class='list-group-item'>No ingredients yet</li>
+      <% else %>
+        <ul class = 'list-group'>
+          <% @cocktail.doses.each do |dose| %>
+            <li class='list-group-item'>
+              <%= dose.description %>
+              <%= dose.ingredient.name %>
+              <%= link_to dose_path(dose), method: :delete,
+                data: {confirm: 'Are you sure?'} do %>
+                <i class="far fa-trash-alt"></i>
+              <% end %>
+            </li>
+          <% end %>
+        </ul>
+      <% end %>
       <%= link_to 'Back to list', cocktails_path, class: 'btn btn-gradient' %>
       <%= link_to 'Add an ingredient', new_cocktail_dose_path(@cocktail), class: 'btn btn-gradient' %>
     </div>
