--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,7 +7,9 @@
   background-position: center;
   flex-grow: 1;
   justify-content: center;
+  text-align: center;
   align-items: center;
+  vertical-align: middle;
   color: white;
   font-size: 24px;
   font-weight: bold;
