--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -4,4 +4,4 @@
   <%= f.input :description %>
   <%= f.submit %>
 <% end %>
-<%= link_to "Back to #{@cocktail.name}", cocktail_path(@cocktail) %>
+<%= link_to "Back to #{@cocktail.name}", cocktail_path(@cocktail), class='btn btn-gradient btn-sm' %>
